--- a/functions/package.json
+++ b/functions/package.json
@@ -12,8 +12,11 @@
     "node": "10"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
+    "jschardet": "^2.1.1",
     "rss-parser": "^3.8.0"
   },
   "devDependencies": {
